<resources>
    <string name="app_name">My_calculator_app</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>
    <string name="addition_symbol">+</string>
    <string name="substraction_symbol">-</string>
    <string name="multiplication_symbol">*</string>
    <string name="division_symbol">/</string>
    <string name="square_root">√¯¯</string>
    <string name="equal_symbol">=</string>
    <string name="currency">$</string>
    <string name="decimal">.</string>
    <string name="positive_negative">+/-</string>

    <string name="currencyconverter">Convert currency</string>
    <string name="converter_button">CONVERT</string>
    <string name="choose_currency_prompt">Please choose a currency</string>
    <string name="result">Converted Amount</string>
    <string name="euro_sign">€</string>

    <string name="on_network_error">Oops something went wrong! Check your internet connection</string>
    <string name="on_input_error">Please enter valid number</string>

    <string name="large_input">Oops! The number you are entering is too big</string>
    <string name="ERROR_callConverter">Invalid Input</string>


</resources>
